# automatic_clicker_2

./: .gitignore  AGENTS.md  Clicker.py  Clicker.spec  aaa.bat  activation_service.py  automatic_clicker_2.README.md  config.ini  functions.py  icon.py  images_rc.py  ini控制.py  ins.txt  main_work.py  pyproject.toml  requirements.txt  test_1.py  关于窗口.py  关闭开机自启.bat  分支执行窗口.py  功能类.py  变量池窗口.py  命令集.db  图像点击位置.py  导航窗口功能.py  开启开机自启.bat  开机自动运行clicker.bat  截图模块.py  数据库操作.py  激活码功能设计.md  生成当月激活码.py  自动更新.py  设置窗口.py  资源文件夹窗口.py  选择窗体.py
窗体/: about.ui  about_ui.py  branchwin.ui  branchwin_ui.py  clickposition.ui  clickposition_ui.py  global_s.ui  global_s_ui.py  image_preview.ui  image_preview_ui.py  info.ui  info_ui.py  mainwindow.ui  mainwindow_ui.py  setting.ui  setting_ui.py  update.ui  update_ui.py  variablepool.ui  variablepool_ui.py  分支执行.ui  分支执行_ui.py  参数窗口.ui  参数窗口_ui.py  图像选择.ui  图像选择_ui.py  导航窗口.ui  导航窗口_ui.py
窗体/flatwhite/: Combinear.qss
