[project]
name = "automatic-clicker-2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "PySide6",
    "pyttsx4",
    "pymsgbox",
    "pyautogui",
    "mouse",
    "keyboard",
    "pywinauto",
    "pandas",
    "selenium",
    "webdriver_manager",
    "pillow",
    "openpyxl",
    "requests",
    "system_hotkey",
    "pygments",
    "opencv-python",
    "baidu-aip",
    "chardet",
    "system_hotkey",
    "pyinstaller",
    "python-dateutil",
    "psutil",
]
